--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="complete">完成</string>
     <string name="uploaded">已上傳</string>
     <string name="unUpoladed">未上傳</string>
+    <string name="food">美食</string>
+    <string name="history">歷史</string>
+    <string name="couple">情侶</string>
+    <string name="travel">旅遊</string>
+    <string name="special">特殊</string>
 </resources>
