--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="custom_guide_text_continue">嗨! 你可以在這裡改變上次的編輯，目前在第</string>
     <string name="stage">關</string>
     <string name="custom_guide_text_unfinished">歡迎回來，在這裡你可以接續上次的編輯進度，目前在第</string>
+    <string name="challenge_deleted">挑戰已刪除</string>
 </resources>
