finish verify detail page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="challenge">挑戰</string>
     <string name="complete">完成</string>
     <string name="uploaded">已上傳</string>
+    <string name="verifying">審核中</string>
     <string name="unUpoladed">未上傳</string>
     <string name="food">美食</string>
     <string name="history">歷史</string>
