--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,11 @@
     <string name="no_gps">未開啟定位</string>
     <string name="created_by">created by</string>
     <string name="select_to_delete">選取挑戰刪除</string>
+    <string name="convert_seconds_to_hours">%1$d Hrs</string>
+    <string name="convert_distances_to_int">%1$d Ms</string>
+    <string name="total_rating_and_comment_quantity">%1$s (%2$d)</string>
+    <string name="challenges">challenges</string>
+    <string name="current">current</string>
+    <string name="one_decimal_format">#.#</string>
+
 </resources>
