--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,14 @@
     <string name="total_rating_and_comment_quantity">%1$s (%2$d)</string>
     <string name="challenges">challenges</string>
     <string name="current">current</string>
+    <string name="confirm">確定</string>
+    <string name="cancel">取消</string>
+    <string name="clean_record">清除紀錄</string>
+    <string name="challenge_interrupted">上次挑戰中斷</string>
+    <string name="continue_last_challenge">要繼續上次的進度嗎</string>
     <string name="one_decimal_format">#.#</string>
+    <string name="internet_not_connected">尚未連接網路歐歐 (ゝ∀･)b</string>
+    <string name="loading_fail">載入失敗 ヽ(゜▽゜　)－C (/;◇;)/~[拖走]</string>
+    <string name="error_getting_document">error getting document ｡･ﾟ･(ﾉД`)ヽ(ﾟДﾟ )秀秀</string>
 
 </resources>
